# semantic-schemas

./: .gitignore  .markdownlint.yaml  .yamllint.yaml  CATALOG.md  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-schema.md  schema-correction.md
.github/workflows/: test.yml
docs/: 1_concepts.md  2_oold-primer.md  3_schema-format.md  4_schema-patterns.md  5_llm-schema-guide.md  concepts.md  oold-primer.md  schema-format.md  schema-patterns.md  simplified-input-guide.md
schemas/characterization/process/PMDCo/: CHANGELOG.md  README.md
schemas/characterization/step/PMDCo/: README.md
schemas/characterization/tensile-test/TTO/: CHANGELOG.md  README.md
schemas/chemical-composition/BWMD/: README.md  example.oold.json  schema.oold.yaml  shape.ttl
schemas/chemical-composition/BWMD/docs/: 1_chemical_composition_workflow.ipynb  chemical_composition_workflow.ipynb  example.input.json  example.oold.json
schemas/chemical-composition/BWMD/notebooks/: chemical_composition_workflow.ipynb
schemas/chemical-composition/BWMD/simplified/: schema.simplified.json  transform.jsonata
schemas/chemical-composition/BWMD/specs/: schema.oold.yaml  (+1 more)
schemas/chemical-composition/PMDCo/: README.md  example.oold.json  schema.oold.yaml
schemas/expertise/: README.md  example.oold.json  schema.oold.yaml
schemas/expertise/docs/: 1_expertise_workflow.ipynb  example.oold.json  expertise_workflow.ipynb
schemas/expertise/notebooks/: expertise_workflow.ipynb
schemas/expertise/specs/: schema.oold.yaml
schemas/measurement-device/PMDCo/: CHANGELOG.md  README.md
schemas/specimen/PMDCo/: README.md
schemas/workflow/PMDCo/: CHANGELOG.md  README.md
scripts/: run_notebooks.sh
src/semantic_schemas/: __init__.py
templates/: schema.oold.yaml
tests/: test_shacl.py  test_transformer_shacl.py
(+132 files in other folders)
