[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-schemas"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jsonata-python",
    "rdflib",
    "pyshacl",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:rdflib",
]
